unpackaged/main/default/objects/Book__c/Book__c.object-meta.xml
<CustomObject>
    <description>OpenStax College book offerings</description>
    <label>Book</label>
    <nameField>
        <label>Books Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>