unpackaged/main/default/objects/Book__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Active for marketing/website</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>