unpackaged/main/default/objects/Book__c/fields/AKA__c.field-meta.xml
<CustomField>
    <fullName>AKA__c</fullName>
    <inlineHelpText>No spaces around commas</inlineHelpText>
    <label>AKA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>