unpackaged/main/default/objects/Book__c/fields/Annualization_number__c.field-meta.xml
<CustomField>
    <fullName>Annualization_number__c</fullName>
    <label>Annualization number</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>