unpackaged/main/default/objects/Book__c/fields/Book_Type__c.field-meta.xml
<CustomField>
    <fullName>Book_Type__c</fullName>
    <description>Helps to determine the type of savings number we use. Set by Andrew</description>
    <inlineHelpText>Helps to determine the type of savings number we use. Set by Andrew</inlineHelpText>
    <label>Book Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HS</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>