unpackaged/main/default/objects/Book__c/fields/Concept_Coach__c.field-meta.xml
<CustomField>
    <fullName>Concept_Coach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concept Coach Applicable</label>
    <type>Checkbox</type>
</CustomField>