unpackaged/main/default/objects/Book__c/fields/Courseware_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Courseware_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Courseware Applicable</label>
    <type>Checkbox</type>
</CustomField>