unpackaged/main/default/objects/Book__c/fields/iBook_Available__c.field-meta.xml
<CustomField>
    <fullName>iBook_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>iBook Available</label>
    <type>Checkbox</type>
</CustomField>