unpackaged/main/default/objects/Book__c/fields/ISBN_10__c.field-meta.xml
<CustomField>
    <fullName>ISBN_10__c</fullName>
    <label>ISBN-10</label>
    <length>10</length>
    <type>Text</type>
</CustomField>