unpackaged/main/default/objects/Book__c/fields/ISBN_13__c.field-meta.xml
<CustomField>
    <fullName>ISBN_13__c</fullName>
    <label>ISBN-13</label>
    <length>13</length>
    <type>Text</type>
</CustomField>