unpackaged/main/default/objects/Book__c/fields/MSRP__c.field-meta.xml
<CustomField>
    <fullName>MSRP__c</fullName>
    <label>MSRP</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>