unpackaged/main/default/objects/Book__c/fields/Official_Name__c.field-meta.xml
<CustomField>
    <fullName>Official_Name__c</fullName>
    <label>Official Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>