unpackaged/main/default/objects/Book__c/fields/OSC_URL__c.field-meta.xml
<CustomField>
    <fullName>OSC_URL__c</fullName>
    <label>OSC URL</label>
    <type>Url</type>
</CustomField>