unpackaged/main/default/objects/Book__c/fields/OSWeb_Group__c.field-meta.xml
<CustomField>
    <fullName>OSWeb_Group__c</fullName>
    <label>OSWeb Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Social Sciences</fullName>
            </value>
            <value>
                <fullName>Humanities</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>