unpackaged/main/default/objects/Book__c/fields/Physical_Comp_Available__c.field-meta.xml
<CustomField>
    <fullName>Physical_Comp_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physical Comp Available</label>
    <type>Checkbox</type>
</CustomField>