unpackaged/main/default/objects/Book__c/fields/Savings_Number__c.field-meta.xml
<CustomField>
    <fullName>Savings_Number__c</fullName>
    <formula>CASE(Book_Type__c, 
"HS", 10.84, 
"AP", 29.81,
79.37)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Savings Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>