unpackaged/main/default/objects/Book__c/fields/Short_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Book_Name__c</fullName>
    <label>Short Book Name</label>
    <type>TextArea</type>
</CustomField>