unpackaged/main/default/objects/Book__c/fields/Tutor_Subject__c.field-meta.xml
<CustomField>
    <fullName>Tutor_Subject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tutor Subject</label>
    <type>Checkbox</type>
</CustomField>