unpackaged/main/default/objects/Book__c/fields/Vol_2_ISBN_13__c.field-meta.xml
<CustomField>
    <fullName>Vol_2_ISBN_13__c</fullName>
    <label>Vol. 2 ISBN-13</label>
    <length>13</length>
    <type>Text</type>
</CustomField>