unpackaged/main/default/objects/Book__c/fields/Volumes_for_Physicals__c.field-meta.xml
<CustomField>
    <fullName>Volumes_for_Physicals__c</fullName>
    <label>Volumes for Physicals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>