unpackaged/main/default/objects/Book__c/fields/X2nd_Edition_ISBN_13__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Edition_ISBN_13__c</fullName>
    <label>2nd Edition ISBN-13</label>
    <type>TextArea</type>
</CustomField>