unpackaged/main/default/objects/Book__c/fields/X3rd_Edition_ISBN_13__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Edition_ISBN_13__c</fullName>
    <label>3rd Edition ISBN-13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>