unpackaged/main/default/objects/Book__c/recordTypes/OSC_Book.recordType-meta.xml
<RecordType>
    <fullName>OSC_Book</fullName>
    <active>true</active>
    <label>OSC Book</label>
</RecordType>