unpackaged/main/default/objects/Book__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Official_Name__c</columns>
    <columns>NAME</columns>
    <columns>Savings_Number__c</columns>
    <columns>Short_Book_Name__c</columns>
    <columns>Marketing_Group__c</columns>
    <columns>Active__c</columns>
    <columns>Annualization_number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>