unpackaged/main/default/objects/Book__c/listViews/Tutor_Books.listView-meta.xml
<ListView>
    <fullName>Tutor_Books</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Tutor_Subject__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Tutor Books</label>
</ListView>